alternative prevent image viewer transparent on dark mode

--- a/darkmode.css
+++ b/darkmode.css
@@ -29,10 +29,6 @@
 	user-select: none; 
 }
 
-#viewer-prev, #viewer-next {
-	background-color: transparent;
-}
-
 /*if dark mode available*/
 @media (prefers-color-scheme: dark) {
 	html, div {
